--- a/src/views/agent/info.ejs
+++ b/src/views/agent/info.ejs
@@ -5,26 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- font awesome cdn link  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="/fontawesome-free-6.2.1-web/css/all.css">
-    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
- 
-    <!-- custom css file link  -->
     <link rel="stylesheet" href="/css/resert.css">
-    <link rel="stylesheet" href="/css/info.css">
+    <link rel="stylesheet" href="/css/agent/info.css">
+    <link rel="stylesheet" href="/fontawesome-free-6.2.1-web/css/all.css">
     <title>Customner Report</title>
 </head>
 
 <body>
     <section>
         <nav class="Navbar">
-            <img id="logo" src="/images/pic/logo.png" alt="this is logo">
+            <img id="logo" src="/images/LOGO.png" alt="this is logo">
             <ul class="Navbar-Directory">
                 <li class="Navbar-Directory-item">Home</li>
-                <li class="Navbar-Directory-item">Dishes</li>
-                <li class="Navbar-Directory-item">Review</li>
+                <li class="Navbar-Directory-item">Partner</li>
+                <li class="Navbar-Directory-item">Contract</li>
                 <li class="Navbar-Directory-item">About us</li>
             </ul>
 
@@ -42,26 +36,20 @@
                     <i class="fa-regular fa-heart"></i>
                 </div>
                 <div class="Nav-Subnav-cart">
-                    <a href="/accb_food.vn/cart">
-                        <i class="fa-sharp fa-solid fa-cart-plus"></i>
-                    </a>
+                    <i class="fa-sharp fa-solid fa-cart-plus"></i>
                 </div>
                 <div class="Nav-Subnav-account">
-                    <a href="/accb_food.vn/profile">
-                        <i class="fa-regular fa-user"></i>
-                    </a>
+                    <i class="fa-regular fa-user"></i>
                 </div>
             </div>
         </nav>
     </section>
 
     <div class="go_back">
-        <form action="/accb_food.vn">
-            <button type="submit">
-                <i class="fa-solid fa-arrow-left"></i>
-                Home
-            </button>
-        </form>
+        <button type="submit">
+            <i class="fa-solid fa-arrow-left"></i>
+            Information
+        </button>
     </div>
 
     </div>
@@ -75,30 +63,31 @@
                 <div class="bottom_left_container">
                     <div class="name">
                         <label for="">Your Name</label>
-                        <span>
-                            <%= dataUser[0].KH_TEN %>
-                        </span>
+                        <span>Hoang Van Cau</span>
                     </div>
                     <div class="gende">
                         <label for="">Gentle</label>
-                        <span><%= dataUser[0].KH_GIOITINH %></span>
+                        <span>Nam</span>
                     </div>
                     <div class="ID">
                         <label for="">ID</label>
-                        <span><%= dataUser[0].KH_SDT %></span>
+                        <span>0123456789</span>
                     </div>
                     <div class="address">
-                        <label for="">Your Address</label>
-                        <span><%= dataAddress[0].DC_SONHA %></span>
+                        <label for="">Address</label>
+                        <span>KTX khu B, DHQG TP.HCM</span>
                     </div>
-
+                    <div class="phone_number">
+                        <label for="">Phone Number</label>
+                        <span>987654321</span>
+                    </div>
                     <button>Edit</button>
                 </div>
             </div>
             <div class="right_container">
-                <img src="<%= dataUser[0].KH_ANH %>" alt="This is avatar">
-                <span><%= dataUser[0].KH_TEN %></span>
-                <span><%= dataUser[0].KH_MAIL %></span>
+                <img src="/images/pic-3.png" alt="This is avatar">
+                <span>Hoang Cau</span>
+                <span>hoangcau14783@gmail.com</span>
             </div>
         </div>
     </section>
