--- a/src/views/sign_up.ejs
+++ b/src/views/sign_up.ejs
@@ -1,111 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="/fontawesome-free-6.2.1-web/css/all.css" />
-    <link rel="stylesheet" href="/css/resert.css" />
-    <link rel="stylesheet" href="/css/sign_up.css" />
-    <title>Sign Up</title>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <body>
-    <section>
-      <nav class="navbar">
-        <button type="submit">
-          <i class="fa-solid fa-arrow-left"></i>
-          Sign Up
-        </button>
-        <img src="/images/pic/logo.png" alt="This is logo" />
-      </nav>
+  <link rel="stylesheet" href="/fontawesome-free-6.2.1-web/css/all.css" />
+  <link rel="stylesheet" href="/css/resert.css" />
+  <link rel="stylesheet" href="/css/sign_up.css" />
+  <title>Sign Up</title>
+</head>
 
-      <div class="container">
-        <div class="left__container">
-          <img src="/images/pic/signup.png" alt="" />
-        </div>
-        <form action="" class="form__container" method="GET">
-          <div class="top_form">
-            <span>Wellcome to focus</span>
-            <span>Register your account</span>
-          </div>
+<body>
+  <section>
+    <nav class="navbar">
+      <button type="submit">
+        <i class="fa-solid fa-arrow-left"></i>
+        Sign Up
+      </button>
+      <img src="/images/pic/logo.png" alt="This is logo" />
+    </nav>
 
-          <div class="middle_form">
-            <div class="item">
-              <label for="">Your name <label for="">*</label></label>
-              <input type="text" placeholder="Enter your name" />
-            </div>
-
-            <div class="gelder">
-              <input type="radio" id="male" name="sex" value="Nam" />
-              <label for="Nam">Male</label><br />
-              <input type="radio" id="Femal" name="sex" value="Nu" />
-              <label for="Nu">Femal</label><br />
-            </div>
-
-            <div class="item">
-              <label for="">Your email<label for="">*</label></label>
-              <input type="email" placeholder="Enter your email" name="email" />
-            </div>
-
-            <div class="item">
-              <label for="">Your phone number<label for="">*</label></label>
-              <input
-                type="text"
-                placeholder="Enter your phone number"
-                name="phone_number"
-              />
-            </div>
-
-            <div class="item">
-              <label for="">Your address<label for="">*</label></label>
-              <input
-                type="text"
-                placeholder="Enter your adress"
-                name="address"
-              />
-            </div>
-
-            <div class="item">
-              <label for="">Your user name<label for="">*</label></label>
-              <input
-                type="text"
-                placeholder="Enter your user name"
-                name="username"
-              />
-            </div>
-
-            <div class="item">
-              <label for="">Your password<label for="">*</label></label>
-              <input
-                type="password"
-                placeholder="Enter your password"
-                name="password"
-              />
-            </div>
-
-            <div class="item">
-              <label for="">Your password<label for="">*</label></label>
-              <input type="password" placeholder="Confirm your password" />
-            </div>
-
-            <input type="submit" value="Login" class="btn_signup" />
-          </div>
-          <div class="bottom_form">
-            <span>Or login with</span>
-            <div class="icon_form">
-              <i class="fa-brands fa-facebook"></i>
-              <i class="fa-brands fa-google"></i>
-              <i class="fa-brands fa-instagram"></i>
-            </div>
-          </div>
-        </form>
+    <div class="container">
+      <div class="left__container">
+        <img src="/images/pic/signup.png" alt="" />
       </div>
-    </section>
+      <form action="/sign_up1" class="form__container" method="POST">
+        <div class="top_form">
+          <span>Wellcome to focus</span>
+          <span>Register your account</span>
+        </div>
 
-    <footer>
-      <span>Copyright © 2022 ACCB Food Inc.</span>
-    </footer>
-  </body>
+        <div class="middle_form">
+          <div class="item">
+            <label for="">Your name <label for="">*</label></label>
+            <input type="text" placeholder="Enter your name" />
+          </div>
+
+          <div class="gelder">
+            <input type="radio" id="male" name="sex" value="Nam" />
+            <label for="Nam">Male</label><br />
+            <input type="radio" id="Femal" name="sex" value="Nu" />
+            <label for="Nu">Femal</label><br />
+          </div>
+
+          <div class="item">
+            <label for="">Your email<label for="">*</label></label>
+            <input type="email" placeholder="Enter your email" name="email" />
+          </div>
+
+          <div class="item">
+            <label for="">Your phone number<label for="">*</label></label>
+            <input type="text" placeholder="Enter your phone number" name="phone_number" />
+          </div>
+
+          <div class="item">
+            <label for="">Your address<label for="">*</label></label>
+            <input type="text" placeholder="Enter your adress" name="address" />
+          </div>
+
+          <div class="item">
+            <label for="">Your user name<label for="">*</label></label>
+            <input type="text" placeholder="Enter your user name" name="username" />
+          </div>
+
+          <div class="item">
+            <label for="">Your password<label for="">*</label></label>
+            <input type="password" placeholder="Enter your password" name="password" />
+          </div>
+
+          <div class="item">
+            <label for="">Your password<label for="">*</label></label>
+            <input type="password" placeholder="Confirm your password" />
+          </div>
+
+          <input type="submit" value="Login" class="btn_signup" />
+        </div>
+        <div class="bottom_form">
+          <span>Or login with</span>
+          <div class="icon_form">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-google"></i>
+            <i class="fa-brands fa-instagram"></i>
+          </div>
+        </div>
+      </form>
+    </div>
+  </section>
+
+  <footer>
+    <span>Copyright © 2022 ACCB Food Inc.</span>
+  </footer>
+</body>
+
 </html>
